<resources>
    <string name="app_name">Fast Video Compressor</string>



    <!-- AdMob ad unit IDs -->
<!--    <string name="natice_advanceadd"> ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="natice_advanceaddvideo">ca-app-pub-3940256099942544/1044960115</string>-->
<!--    <string name="admob_app_id">ca-app-pub-4959089160488184~8667649661</string>-->
<!--    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>-->


    <!--production-->
    <string name="admob_app_id">ca-app-pub-5358249725879040~8937272277</string>
    <string name="natice_advanceadd"> ca-app-pub-5358249725879040/3368378688</string>
    <string name="natice_advanceaddvideo">ca-app-pub-3940256099942544/1044960115</string>
    <string name="banner_home_footer">ca-app-pub-5358249725879040/8620705361</string>
    <string name="interstitial_full_screen">ca-app-pub-5358249725879040/6748386342</string>


    <string name="quality_186p">186p</string>
    <string name="quality_426p">426p</string>
    <string name="quality_512p">512p</string>
    <string name="quality_640p">640p</string>

    <string name="quality_720p">720p</string>
    <string name="quality_960p">960p</string>
    <string name="quality_1080p">1080p</string>
    <string name="quality_1920p">1920p</string>


    <string name="convert">Compress this video</string>

    <string name="video_info">%1$sx%2$s, %3$s, %4$s</string>

    <string name="output_video">Output:</string>
    <string name="input_video">Input:</string>



</resources>